--- a/createJob.yml
+++ b/createJob.yml
@@ -2,10 +2,10 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to SynergyBank accounts related docker APIs "
+  message: "Welcome to UKG group 1 IJP APIs "
   contactDetails:
     name: "John Doe - Developer"
-    email: "john@synergybank.com"
+    email: "john@Doe.com"
   onCallSupport:
     - (555) 555-1234
     - (555) 523-1345
